--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@
 #fuel-savings-calculator .row{
   display: grid;
   grid-gap: 50px;
-  grid-template-columns: 280px 1fr 100px;
+  grid-template-columns: 260px 1fr 100px;
   padding: 30px 0px;
 }
 
@@ -65,4 +65,9 @@
   font-weight: 600;
   font-size: 40px;
   display: block;
+}
+
+.dashicons{
+  margin-top: 6px;
+  margin-left: 10px;
 }
