compatibility with origin plugin

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-.fuel-savings-calculator{
+.fuel-savings-calculator-wapper{
   font-size: 18px;
 }
 
-.fuel-savings-calculator h5{
+.fuel-savings-calculator-wapper h5{
   text-align: center;
   font-weight: 400;
 }
