--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,15 @@
   font-size: 18px;
 }
 
-.fuel-savings-calculator-wapper h5{
-  text-align: center;
-  font-weight: 400;
-}
-
 #fuel-savings-calculator .rangeslider__handle{
   background: white;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    border: 2px solid black;
-    cursor: pointer;
-    opacity: a0;
-    top: -5px;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  border: 2px solid black;
+  cursor: pointer;
+  opacity: a0;
+  top: -5px;
 }
 
 #fuel-savings-calculator .rangeslider__fill{
@@ -53,6 +48,10 @@
   padding-top: 15px;
 }
 
+#fuel-savings-calculator .label{
+  position: relative;
+}
+
 .estimated-savings{
   display: grid;
   grid-template-columns: auto auto auto auto;
@@ -81,28 +80,6 @@
   box-shadow: 0 0 11px rgba(33,33,33,.2); 
 }
 
-.estimated-savings-annually-wrap{
-  margin-top: 20px;
-}
-
-.estimated-savings-annually-wrap div{
-  max-width: 100%;
-  text-align: center;
-  border: 1px solid #DEE4EC;
-  border-radius: 5px;
-  box-shadow: 1px 1px 16px 0 rgba(0, 0, 0, 0.08);
-  padding: 30px;
-  transition: box-shadow .3s;
-  background: rgb(162 205 58);
-  color: #fff;
-}
-
-.estimated-savings-annually-wrap div span{
-  font-weight: 500;
-  font-size: 40px;
-  display: block;
-}
-
 .dashicons{
   margin-top: 6px;
   margin-left: 10px;
@@ -111,4 +88,104 @@
 .calculator-contact-us-now{
   display: block;
   text-align: center;
+}
+
+#fuel-savings-calculator input[type=range]{
+  display: none;
+}
+
+
+/* TOOLTIP */
+.help-tip {
+  position: absolute;
+  top: 5px;
+  right: 16px;
+  margin-left: 10px;
+  text-align: center;
+  background-color: #2b2d2f;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 12px;
+  line-height: 22px;
+  cursor: default;
+}
+
+.help-tip:hover {
+  cursor: pointer;
+  background-color: #2b2d2f;
+}
+
+.help-tip:before {
+  content: '?';
+  font-weight: 700;
+  color: #fff;
+}
+
+.help-tip p {
+  visibility: hidden;
+  opacity: 0;
+  text-align: left;
+  background-color: #2b2d2f;
+  padding: 20px;
+  width: 300px;
+  position: absolute;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 13px;
+  line-height: normal;
+  transition: opacity .6s;
+  z-index: 9999;
+  top: -40px;
+  left: 130%;
+}
+
+.help-tip:hover p {
+  cursor: default;
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1.0);
+}
+
+.help-tip p:before {
+  content: " ";
+  position: absolute;
+  top: 50%;
+  right: 100%; /* To the left of the tooltip */
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent #2b2d2f transparent transparent;
+}
+
+.help-tip p:after {
+  /* width: 100%;
+  height: 40px;
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: 0; */
+  /* top: 50%;
+  right: 100%; */
+}
+
+.help-tip a {
+  color: #fff;
+  font-weight: 700;
+}
+
+.help-tip a:hover, .help-tip a:focus {
+  color: #fff;
+  text-decoration: underline;
+}
+
+.ct-shortcode{
+  width: 100%;
+}
+
+
+#estimated-savings-annually{
+  color: #A2CC3A;
+  background: yellow;
+  font-weight: 600;
 }
