--- a/css/style.css
+++ b/css/style.css
@@ -1,191 +1,1 @@
-.fuel-savings-calculator-wapper{
-  font-size: 18px;
-}
-
-#fuel-savings-calculator .rangeslider__handle{
-  background: white;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  border: 2px solid black;
-  cursor: pointer;
-  opacity: a0;
-  top: -5px;
-}
-
-#fuel-savings-calculator .rangeslider__fill{
-  height: 8px;
-  -webkit-appearance: none;
-  background: black;
-  border: none;
-  outline: none;
-}
-
-#fuel-savings-calculator .rangeslider {
-  float: left;
-  background: #ddd;
-  height: 8px;
-  /* width: calc(100% - 330px); */
-  border-radius: 4px;
-  box-shadow: none;
-}
-
-#fuel-savings-calculator input[type=text]{
-  text-align: center;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 8px 4px;
-}
-
-#fuel-savings-calculator .row{
-  display: grid;
-  grid-gap: 50px;
-  grid-template-columns: 260px 1fr 100px;
-  padding: 30px 0px;
-}
-
-#fuel-savings-calculator .range-slider{
-  padding-top: 15px;
-}
-
-#fuel-savings-calculator .label{
-  position: relative;
-}
-
-.estimated-savings{
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  gap: 10px;
-  justify-content: space-between;
-}
-
-.estimated-savings div{
-  max-width: 340px;
-  text-align: center;
-  border: 1px solid #DEE4EC;
-  border-radius: 5px;
-  box-shadow: 1px 1px 16px 0 rgba(0, 0, 0, 0.08);
-  padding: 15px 20px;
-  transition: box-shadow .3s;
-}
-
-.estimated-savings div span{
-  font-weight: 500;
-  font-size: 40px;
-  display: block;
-}
-
-
-.estimated-savings div:hover{
-  box-shadow: 0 0 11px rgba(33,33,33,.2); 
-}
-
-.dashicons{
-  margin-top: 6px;
-  margin-left: 10px;
-}
-
-.calculator-contact-us-now{
-  display: block;
-  text-align: center;
-}
-
-#fuel-savings-calculator input[type=range]{
-  display: none;
-}
-
-
-/* TOOLTIP */
-.help-tip {
-  position: absolute;
-  top: 5px;
-  right: 16px;
-  margin-left: 10px;
-  text-align: center;
-  background-color: #2b2d2f;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  font-size: 12px;
-  line-height: 22px;
-  cursor: default;
-}
-
-.help-tip:hover {
-  cursor: pointer;
-  background-color: #2b2d2f;
-}
-
-.help-tip:before {
-  content: '?';
-  font-weight: 700;
-  color: #fff;
-}
-
-.help-tip p {
-  visibility: hidden;
-  opacity: 0;
-  text-align: left;
-  background-color: #2b2d2f;
-  padding: 20px;
-  width: 300px;
-  position: absolute;
-  border-radius: 4px;
-  color: #fff;
-  font-size: 13px;
-  line-height: normal;
-  transition: opacity .6s;
-  z-index: 9999;
-  top: -40px;
-  left: 130%;
-}
-
-.help-tip:hover p {
-  cursor: default;
-  visibility: visible;
-  opacity: 1;
-  transform: scale(1.0);
-}
-
-.help-tip p:before {
-  content: " ";
-  position: absolute;
-  top: 50%;
-  right: 100%; /* To the left of the tooltip */
-  margin-top: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: transparent #2b2d2f transparent transparent;
-}
-
-.help-tip p:after {
-  /* width: 100%;
-  height: 40px;
-  content: '';
-  position: absolute;
-  top: -5px;
-  left: 0; */
-  /* top: 50%;
-  right: 100%; */
-}
-
-.help-tip a {
-  color: #fff;
-  font-weight: 700;
-}
-
-.help-tip a:hover, .help-tip a:focus {
-  color: #fff;
-  text-decoration: underline;
-}
-
-.ct-shortcode{
-  width: 100%;
-}
-
-
-#estimated-savings-annually{
-  color: #A2CC3A;
-  background: yellow;
-  font-weight: 600;
-}
+#fuel-savings-calculator .rangeslider__handle{background:#fff;border-radius:50%;width:20px;height:20px;border:2px solid #000;cursor:pointer;opacity:a0;top:-5px}#fuel-savings-calculator .rangeslider__fill{height:8px;-webkit-appearance:none;background:#000;border:none;outline:none}#fuel-savings-calculator .rangeslider{float:left;background:#ddd;height:8px;border-radius:4px;box-shadow:none}#fuel-savings-calculator input[type=text]{text-align:center;border:1px solid #ddd;border-radius:8px;padding:8px 4px}#fuel-savings-calculator .row{display:grid;grid-gap:50px;grid-template-columns:260px 1fr 100px;padding:30px 0px}#fuel-savings-calculator .range-slider{padding-top:15px}#fuel-savings-calculator .label{position:relative}#fuel-savings-calculator input[type=range]{display:none}.estimated-savings{display:grid;grid-column-gap:10px;justify-content:space-between;grid-template-columns:repeat(3, minmax(0, 1fr))}.estimated-savings div{max-width:340px;text-align:center;border:1px solid #dee4ec;border-radius:5px;box-shadow:1px 1px 16px 0 rgba(0,0,0,.08);padding:15px 20px;transition:box-shadow .3s}.estimated-savings div span{font-weight:500;font-size:30px;display:block}.estimated-savings div:hover{box-shadow:0 0 11px rgba(33,33,33,.2)}.dashicons{margin-top:6px;margin-left:10px}.calculator-contact-us-now{display:block;text-align:center}.help-tip{position:absolute;top:5px;right:16px;margin-left:10px;text-align:center;background-color:#2b2d2f;border-radius:50%;width:20px;height:20px;font-size:12px;line-height:22px;cursor:default}.help-tip:hover{cursor:pointer;background-color:#2b2d2f}.help-tip:before{content:"?";font-weight:700;color:#fff}.help-tip p{visibility:hidden;opacity:0;text-align:left;background-color:#2b2d2f;padding:20px;width:300px;position:absolute;border-radius:4px;color:#fff;font-size:13px;line-height:normal;transition:opacity .6s;z-index:9999;top:-40px;left:130%}.help-tip:hover p{cursor:default;visibility:visible;opacity:1;transform:scale(1)}.help-tip p:before{content:" ";position:absolute;top:50%;right:100%;margin-top:-5px;border-width:5px;border-style:solid;border-color:rgba(0,0,0,0) #2b2d2f rgba(0,0,0,0) rgba(0,0,0,0)}.help-tip a{color:#fff;font-weight:700}.help-tip a:hover,.help-tip a:focus{color:#fff;text-decoration:underline}.ct-shortcode{width:100%}#estimated-savings-annually{color:#a2cc3a;background:#ff0;font-weight:600;padding:8px}@media only screen and (max-width: 767px){#fuel-savings-calculator .row{grid-template-columns:1fr;gap:0px}#fuel-savings-calculator .row .help-tip{position:unset;display:inline-block}#fuel-savings-calculator .row .range-value{padding-top:20px}.estimated-savings{grid-template-columns:1fr;gap:20px}.estimated-savings div{width:100%;max-width:100%}}/*# sourceMappingURL=style.css.map */
