--- a/css/style.scss
+++ b/css/style.scss
@@ -138,7 +138,7 @@
     transition: opacity .6s;
     z-index: 9999;
     top: -40px;
-    left: 130%;
+    left: 160%;
   }
   
   &:hover p {
@@ -157,17 +157,6 @@
     border-width: 5px;
     border-style: solid;
     border-color: transparent #2b2d2f transparent transparent;
-  }
-  
-  p:after {
-    /* width: 100%;
-    height: 40px;
-    content: '';
-    position: absolute;
-    top: -5px;
-    left: 0; */
-    /* top: 50%;
-    right: 100%; */
   }
   
   a {
@@ -208,8 +197,20 @@
         display: inline-block;
 
         p{
-          top: -38px;
-          left: 30px;
+          left: 50%;
+          margin-left: -150px;
+          top: -96px;
+
+          &:before{
+            content: " ";
+            top: 100%; /* At the bottom of the tooltip */
+            left: 50%;
+            right: auto;
+            margin-left: -5px;
+            margin-top: 0px;
+            border-width: 5px;
+            border-color: black transparent transparent transparent;
+          }
         }
       }
       
