--- a/css/style.scss
+++ b/css/style.scss
@@ -230,3 +230,11 @@
     }
   }
 }
+
+@media only screen and (max-width: 480px) {
+  #fuel-savings-calculator{
+    .label{
+      display: grid;
+    }
+  }
+}
