--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,13 @@
 .fuel-savings-calculator-wrapper{
   #fuel-savings-calculator{
+    font-size: 18px;
+
     .rangeslider__handle{
       background: white;
       border-radius: 50%;
       width: 20px;
       height: 20px;
-      border: 2px solid black;
+      border: 2px solid rgb(65, 65, 65);
       cursor: pointer;
       opacity: a0;
       top: -5px;
@@ -14,7 +16,7 @@
     .rangeslider__fill{
       height: 8px;
       -webkit-appearance: none;
-      background: black;
+      background: rgb(65, 65, 65);
       border: none;
       outline: none;
     }
@@ -31,8 +33,8 @@
     input[type=text]{
       text-align: center;
       border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 8px 4px;
+      border-radius: 6px;
+      padding: 6px 4px;
       width: 100%;
     }
     
@@ -40,7 +42,7 @@
       display: grid;
       grid-gap: 40px;
       grid-template-columns: 280px 1fr 60px;
-      padding: 20px 0px;
+      padding: 15px 0px;
   
       .range-value{
         text-align: right;
@@ -89,16 +91,6 @@
     }
   }
   
-  .dashicons{
-    margin-top: 6px;
-    margin-left: 10px;
-  }
-  
-  .calculator-contact-us-now{
-    display: block;
-    text-align: center;
-  }
-  
   /* TOOLTIP */
   .help-tip {
     position: absolute;
@@ -106,7 +98,7 @@
     right: 0px;
     margin-left: 10px;
     text-align: center;
-    background-color: #2b2d2f;
+    background-color: rgb(65, 65, 65);
     border-radius: 50%;
     width: 20px;
     height: 20px;
@@ -116,7 +108,7 @@
   
     &:hover {
       cursor: pointer;
-      background-color: #2b2d2f;
+      background-color: rgb(65, 65, 65);
     }
     
     &:before {
@@ -129,7 +121,7 @@
       visibility: hidden;
       opacity: 0;
       text-align: left;
-      background-color: #2b2d2f;
+      background-color: rgb(65, 65, 65);
       padding: 20px;
       width: 300px;
       position: absolute;
@@ -158,7 +150,7 @@
       margin-top: -5px;
       border-width: 5px;
       border-style: solid;
-      border-color: transparent #2b2d2f transparent transparent;
+      border-color: transparent rgb(65, 65, 65) transparent transparent;
     }
     
     a {
@@ -173,27 +165,22 @@
     
   }
   
-  #estimated-savings-annually{
-    color: #A2CC3A;
-    font-weight: 600;
-    border-bottom: 2px solid #a2cc3a;
-  }
-
   .desc{
     text-align: center;
   }
+
   h5{
     text-align: center;
     font-weight: 300;
+
+    #estimated-savings-annually{
+      color: #A2CC3A;
+      font-weight: 600;
+      border-bottom: 2px solid #a2cc3a;
+    }
   }
 
-}
-
-.ct-shortcode{
-  width: 100%;
-}
-
-// RESPONSIVE
+  // RESPONSIVE
 @media only screen and (max-width: 767px) {
   #fuel-savings-calculator{
     .row{
@@ -219,7 +206,7 @@
             margin-left: -5px;
             margin-top: 0px;
             border-width: 5px;
-            border-color: black transparent transparent transparent;
+            border-color: rgb(65, 65, 65) transparent transparent transparent;
           }
         }
       }
@@ -250,3 +237,9 @@
     }
   }
 }
+}
+
+.ct-shortcode{
+  width: 100%;
+}
+
