--- a/css/style.scss
+++ b/css/style.scss
@@ -77,6 +77,7 @@
       box-shadow: 1px 1px 16px 0 rgba(0, 0, 0, 0.08);
       padding: 15px 20px;
       transition: box-shadow .3s;
+      font-size: 16px;
     }
     
     div span{
