pdf html template

--- a/templates/pdf-template.html
+++ b/templates/pdf-template.html
@@ -2,20 +2,31 @@
 <html lang="en">
   <head>
     <style type="text/css">
+      body{
+        font-family: sans-serif;
+      }
+      .heading{
+        text-align: center;
+      }
       .two-column{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        display: table;
+      }
+      .two-column div{
+        width: 50%;
+        float: left;
       }
     </style>
   </head>
   <body>
     <div class="heading">
-      <img src="cover.png" alt="Fuel Logic">
+      <img src="../images/FL-HORIZONTAL-W-SLOGAN.png" alt="Fuel Logic">
+      <br/>
       Fuel Logic - Powering Efficiency, One Gallon at a Time.
     </div>
+    <br>
     <div class="two-column">
       <div>
-        <h1>The true cost of fuel</h1>
+        <h1>The True Cost Of Fuel</h1>
         <p>With Fuel Logic, fueling is simplified. Fleet managers, on average, save $21, 840 annually. Why? It's not just about pump prices; it's about time, labor, and productivity.</p>
         <h3>Bulk Fuel Delivery:</h3>
         <p>Get competitive pricing, predictable schedules, and deliveries tailored to your needs. No more guessing, no more wasted hours.</p>
@@ -45,7 +56,7 @@
         <ul style="list-style:none; padding: 10px; border: 1px dotted #c4ec87; background: #f4fde7; font-size: 19px!important; line-height: 24px;">	<li style="border-bottom: 1px dotted #9cc83a; padding: 5px; background: #f7fcf0;">Estimated Gallons Consumed per Week: <span style="color: #73a03b; font-weight: 900; "><span class="lfb_richVariable" data-varitemid="449" data-action="price">660.00</span></span></li><li style="border-bottom: 1px dotted #9cc83a; padding: 5px; background: #eef7d9;">Man Hours Allocated to Fueling per Week: <span style="color: #73a03b; font-weight: 900; "><span class="lfb_richVariable" data-varitemid="450" data-action="price">20.00</span></span></li><li style="border-bottom: 1px dotted #9cc83a; padding: 5px; background: #f7fcf0;">Lost Asset Production Hours per Week: <span style="color: #73a03b; font-weight: 900;"><span class="lfb_richVariable" data-varitemid="451" data-action="price">10.00</span></span></li><li style="border-bottom: 1px dotted #9cc83a; padding: 5px; background: #d9d9d9;">Estimated Cost of Self Fueling per Week: <span style="color: black; font-weight: 900; ">$<span class="lfb_richVariable" data-varitemid="452" data-action="price">440.00</span></span></li><li style="color: white; font-size: 16px; border: 1px dotted #a2d1e5; border-top: 3px solid #626465; padding: 8px; background:#363636;">Total Estimated Fuel Savings Annually: <span style="color:#84b43b; font-weight: 900; border-bottom: 4px solid #84b43b; padding-bottom: 3px; ">$<span class="lfb_richVariable" data-varitemid="453" data-action="price">22,880.00</span></span></li>	</ul>
 
         <h2>With Fuel Logic Your Estimated Yearly Fuel Savings: $22,880.00</h2>
-        <img src="icon.jpg" alt="Fuel Logic" style="width: 100px;">Unlock Your Fueling Potential with Fuel Logic
+        <img src="../images/FL-REVERSE.png" alt="Fuel Logic" style="width: 100px;">Unlock Your Fueling Potential with Fuel Logic
       </div>
     </div>
     <div class="footer">www.fuellogic.net. |. sales@fuellogic.net. | 866-934-6062</div>
