--- a/css/style.scss
+++ b/css/style.scss
@@ -276,7 +276,8 @@
     padding: 8px;
   }
 
-  p.actions{
+  span.actions{
+    padding: 10px 0px;
     text-align: right;
     display: flex;
     width: 100%;
