--- a/css/style.scss
+++ b/css/style.scss
@@ -293,6 +293,46 @@
   button{
     border: none;
     display: inline-block;
+    position: relative;
+    padding: 8px 16px;
+    cursor: pointer;
+  }
+
+  #send-pdf-report{
+    transition: all 0.2s;
+  }
+
+  .button--loading {
+    &::after {
+      content: "";
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      border: 4px solid transparent;
+      border-top-color: #ffffff;
+      border-radius: 50%;
+      animation: button-loading-spinner 1s ease infinite;
+    }
+
+    .button__text {
+      visibility: hidden;
+      opacity: 0;
+    }
+  }
+
+  @keyframes button-loading-spinner {
+    from {
+      transform: rotate(0turn);
+    }
+  
+    to {
+      transform: rotate(1turn);
+    }
   }
 }
 
@@ -310,3 +350,4 @@
     }
   }
 }
+
