--- a/blocks/src/fuel_savings_calculator_slider/editor.scss
+++ b/blocks/src/fuel_savings_calculator_slider/editor.scss
@@ -3,7 +3,386 @@
  *
  * Replace them with your own styles or remove the file completely.
  */
+ .wp-block-create-block-fuel-savings-calculator-slider{
+  #fuel-savings-calculator{
+    font-size: 18px;
 
-.wp-block-create-block-blocks {
-	border: 1px dotted #f00;
+    .rangeslider__handle{
+      background: white;
+      border-radius: 50%;
+      width: 20px;
+      height: 20px;
+      border: 2px solid rgb(65, 65, 65);
+      cursor: pointer;
+      opacity: a0;
+      top: -5px;
+    }
+  
+    .rangeslider__fill{
+      height: 8px;
+      -webkit-appearance: none;
+      background: rgb(65, 65, 65);
+      border: none;
+      outline: none;
+    }
+  
+    .rangeslider {
+      float: left;
+      background: #ddd;
+      height: 8px;
+      /* width: calc(100% - 330px); */
+      border-radius: 4px;
+      box-shadow: none;
+    }
+    
+    input[type=text]{
+      text-align: center;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      padding: 6px 4px;
+      width: 100%;
+    }
+    
+    .row{
+      display: grid;
+      grid-gap: 40px;
+      grid-template-columns: 280px 1fr 60px;
+      padding: 15px 0px;
+  
+      .range-value{
+        text-align: right;
+        margin-top: -4px;
+      }
+    }
+    
+    .range-slider{
+      padding-top: 10px;
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+    
+    .label{
+      position: relative;
+    }
+  
+    input[type=range]{
+      display: none;
+    }
+  }
+
+  .estimated-savings{
+    display: grid;
+    grid-column-gap: 10px;
+    justify-content: space-between;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    width: 100%;
+  
+    div{
+      text-align: center;
+      border: 1px solid #DEE4EC;
+      border-radius: 5px;
+      box-shadow: 1px 1px 16px 0 rgba(0, 0, 0, 0.08);
+      padding: 15px 20px;
+      transition: box-shadow .3s;
+      font-size: 16px;
+    }
+    
+    div span{
+      font-weight: 500;
+      font-size: 40px;
+      display: block;
+    }
+    
+    
+    div:hover{
+      box-shadow: 0 0 11px rgba(33,33,33,.2); 
+    }
+  }
+  
+  /* TOOLTIP */
+  .help-tip {
+    position: absolute;
+    top: 5px;
+    right: 0px;
+    margin-left: 10px;
+    text-align: center;
+    background-color: rgb(65, 65, 65);
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    font-size: 12px;
+    line-height: 22px;
+    cursor: default;
+  
+    &:hover {
+      cursor: pointer;
+      background-color: rgb(65, 65, 65);
+    }
+    
+    &:before {
+      content: '?';
+      font-weight: 700;
+      color: #fff;
+    }
+    
+    p {
+      visibility: hidden;
+      opacity: 0;
+      text-align: left;
+      background-color: rgb(65, 65, 65);
+      padding: 20px;
+      width: 300px;
+      position: absolute;
+      border-radius: 4px;
+      color: #fff;
+      font-size: 13px;
+      line-height: normal;
+      transition: opacity .6s;
+      z-index: 9999;
+      top: -40px;
+      left: 160%;
+    }
+    
+    &:hover p {
+      cursor: default;
+      visibility: visible;
+      opacity: 1;
+      transform: scale(1.0);
+    }
+    
+    p:before {
+      content: " ";
+      position: absolute;
+      top: 50%;
+      right: 100%; /* To the left of the tooltip */
+      margin-top: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: transparent rgb(65, 65, 65) transparent transparent;
+    }
+    
+    a {
+      color: #fff;
+      font-weight: 700;
+  
+      &:hover, &:focus {
+        color: #fff;
+        text-decoration: underline;
+      }
+    }
+    
+  }
+  
+  .desc{
+    text-align: center;
+  }
+
+  h5{
+    text-align: center;
+    font-weight: 300;
+
+    #estimated-savings-annually{
+      color: #A2CC3A;
+      font-weight: 600;
+      border-bottom: 2px solid #a2cc3a;
+    }
+  }
+
+  .ct-shortcode{
+    width: 100%;
+  }
+
+  // RESPONSIVE
+  @media only screen and (max-width: 767px) {
+    #fuel-savings-calculator{
+      .row{
+        grid-template-columns: 1fr;
+        gap: 0px;
+
+        .help-tip{
+          position: relative;
+          top: 0px;
+          right: 0px;
+          display: inline-block;
+
+          p{
+            left: 50%;
+            margin-left: -150px;
+            top: -96px;
+
+            &:before{
+              content: " ";
+              top: 100%; /* At the bottom of the tooltip */
+              left: 50%;
+              right: auto;
+              margin-left: -5px;
+              margin-top: 0px;
+              border-width: 5px;
+              border-color: rgb(65, 65, 65) transparent transparent transparent;
+            }
+          }
+        }
+        
+        .range-value{
+          padding-top: 20px;
+          text-align: left; 
+        }
+      }
+      .range-slider{
+        padding-left: 0px;
+        padding-right: 0px;
+      }
+    }
+    .estimated-savings{
+      grid-template-columns: 1fr;
+      gap: 20px;
+
+      div{
+        width: 100%;
+        max-width: 100%;
+      }
+    }
+  }
+
+  @media only screen and (max-width: 480px) {
+    #fuel-savings-calculator{
+      .label{
+        .help-tip{
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+
+
+
+// PDF Report
+.fuel-savings-pdf-report-wrapper{
+  a.pdf-report-salesperson-btn,
+  a.pdf-report-btn{
+    background-color: #1e73be;
+    border: 1px solid #1e73be;
+    color: #ffffff;
+    padding: 10px 16px;
+    display: inline-block;
+    cursor: pointer;
+  }
+}
+
+#pdf-report-salesperson.modal,
+#pdf-report.modal{
+  padding: 40px 50px;
+  max-width: 600px;
+  display: none;
+
+  p{
+    display: grid;
+    grid-template-columns: 80px 1fr;
+    padding: 10px 0px;
+  }
+
+  input, select{
+    padding: 8px;
+  }
+
+  span.actions{
+    padding: 10px 0px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    align-items: center;
+  }
+  
+  img{
+    display: none;
+  }
+  
+  button{
+    border: none;
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+  }
+
+  #send-pdf-report{
+    transition: all 0.2s;
+    width: 100%;
+  }
+
+  .button--loading {
+    &::after {
+      content: "";
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      border: 4px solid transparent;
+      border-top-color: #ffffff;
+      border-radius: 50%;
+      animation: button-loading-spinner 1s ease infinite;
+    }
+
+    .button__text {
+      visibility: hidden;
+      opacity: 0;
+    }
+  }
+
+  @keyframes button-loading-spinner {
+    from {
+      transform: rotate(0turn);
+    }
+  
+    to {
+      transform: rotate(1turn);
+    }
+  }
+}
+
+#pdf-report-salesperson.modal{
+  p{
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 10px 0px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  #pdf-report-salesperson.modal,
+  #pdf-report.modal{
+    padding: 20px;
+
+    input[type=text], input[type=email]{
+      width: 100%;
+    }
+
+    p, span.actions{
+      grid-template-columns: 100%;
+
+      div.g-recaptcha{
+
+        div{
+          width: 100%!important;
+          text-align: center;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  #pdf-report-salesperson.modal,
+  #pdf-report.modal{
+    div.g-recaptcha{
+      transform: scale(0.77);
+      transform-origin: 0 0;
+    }
+  }
 }
