calculator new texts and adjust slider max value

--- a/css/style.scss
+++ b/css/style.scss
@@ -58,6 +58,8 @@
     
     .label{
       position: relative;
+      display: flex;
+      flex-direction: column;
     }
   
     input[type=range]{
