--- a/blocks/src/fuel_savings_calculator_slider/editor.scss
+++ b/blocks/src/fuel_savings_calculator_slider/editor.scss
@@ -63,6 +63,8 @@
     
     .label{
       position: relative;
+      display: flex;
+      flex-direction: column;
     }
   
     input[type=range]{
