--- a/blocks/src/fuel_savings_calculator_slider/editor.scss
+++ b/blocks/src/fuel_savings_calculator_slider/editor.scss
@@ -22,12 +22,12 @@
     .rangeslider__handle{
       background: white;
       border-radius: 50%;
-      width: 20px;
-      height: 20px;
+      width: 18px;
+      height: 18px;
       border: 2px solid rgb(65, 65, 65);
       cursor: pointer;
       opacity: a0;
-      top: -5px;
+      top: -8px;
     }
   
     .rangeslider__fill{
@@ -86,8 +86,8 @@
     /* Start Custom Style For Calculator - from oxygen styles*/
     .rangeslider__handle {
       background: #a9d447;
-      width: 26px;
-      height: 26px;
+      width: 18px;
+      height: 18px;
       border: 7px solid #81a431;
       top: -8px;
     }
@@ -126,24 +126,21 @@
   
     div{
       text-align: center;
-      border: 1px solid #DEE4EC;
-      border-radius: 5px;
-      box-shadow: 1px 1px 16px 0 rgba(0, 0, 0, 0.08);
-      padding: 15px 20px;
-      transition: box-shadow .3s;
       font-size: 16px;
+      border: 0;
+      border-radius: 13px;
+      box-shadow: none;
+      padding: 15px 20px;
+      transition: none;
+      background-color: rgb(0 0 0 / 6%);
+      margin-top: 9px;
     }
     
     div span{
-      font-weight: 500;
+      font-weight: bold;
       font-size: 40px;
       display: block;
-    }
-    
-    
-    div:hover{
-      box-shadow: 0 0 11px rgba(33,33,33,.2); 
-    }
+    } 
   }
   
   /* TOOLTIP */
@@ -240,8 +237,7 @@
       background: rgb(219 233 188);
       border-radius: 13px;
       margin-top: 10px;
-      padding-top: 2px;
-      padding-bottom: 3px;
+      padding: 20px 0px;
     }
   }
 
