--- a/blocks/src/fuel_savings_calculator_slider/style.scss
+++ b/blocks/src/fuel_savings_calculator_slider/style.scss
@@ -4,4 +4,166 @@
  *
  * Replace them with your own styles or remove the file completely.
  */
- 
+ /* Custom Style For Calculator */
+
+/* Top Icon Issues */
+/* .page-id-4949 .ct-image { height: auto!important; }
+.page-id-4949 .ct-headline { text-align: center; } */
+
+/* Mobile Only */
+@media (max-width: 767px) {
+  .page-id-4949 div#div_block-140-4681 { display: none; }
+  .page-id-4949 div#div_block-142-4681 { display: none; }
+}
+
+/* iPad Horiz & Desktop Only */
+@media (min-width: 768px) {
+
+  body .fuel-savings-calculator-wrapper {
+      padding-left: 60px;
+      padding-right: 60px;
+  }
+
+  body .fuel-savings-calculator-wrapper h5 #estimated-savings-annually {
+      font-size: 72px;
+  }
+}
+
+/* div#shortcode-6-4417 { width: 100%; } */
+
+body .fuel-savings-calculator-wrapper #fuel-savings-calculator .rangeslider__handle {
+  background: #a9d447;
+  width: 18px;
+  height: 18px;
+  border: 7px solid #81a431;
+  top: -8px;
+}
+
+body .fuel-savings-calculator-wrapper #fuel-savings-calculator .rangeslider__fill {
+  height: 12px;
+  background: #a9d445;
+}
+
+body .fuel-savings-calculator-wrapper #fuel-savings-calculator .rangeslider {
+  background: rgb(0 0 0 / 12%);
+height: 12px;
+}
+
+body .fuel-savings-calculator-wrapper .help-tip {
+  background-color: #575b4c;
+}
+
+body .fuel-savings-calculator-wrapper #fuel-savings-calculator .row {
+  padding: 13px 0px;
+}
+
+body .fuel-savings-calculator-wrapper #fuel-savings-calculator .label {
+  font-weight: bold;
+}
+
+body .fuel-savings-calculator-wrapper #fuel-savings-calculator input[type=text] {
+  border: none;
+  width: 100%;
+  font-weight: bold;
+  background-color: rgb(0 0 0 / 6%);
+  font-size: 23px;
+  color: #575b4c;
+}
+
+body .fuel-savings-calculator-wrapper h5 #estimated-savings-annually {
+  color: #a2cc3a;
+  font-weight: 600;
+  border-bottom: 8px solid #a9d445;
+  display: block;
+  font-size: 60px;
+  background: rgb(219 233 188);
+  border-radius: 13px;
+  margin-top: 10px;
+  padding: 20px 0px;
+}
+
+body .fuel-savings-calculator-wrapper h5 {
+  font-weight: bold;
+  font-size: 18px;
+  text-transform: uppercase;
+  margin-top: 30px;
+}
+
+body .fuel-savings-calculator-wrapper br {
+  display: none;
+}
+
+
+body .fuel-savings-calculator-wrapper .estimated-savings div {
+  border: 0;
+  border-radius: 13px;
+  box-shadow: none;
+  padding: 15px 20px;
+  transition: none;
+  font-size: 16px;
+  background-color: rgb(0 0 0 / 6%);
+  margin-top: 9px;
+}
+
+body .fuel-savings-calculator-wrapper .estimated-savings div span {
+  font-weight: bold;
+  font-size: 40px;
+  display: block;
+}
+
+body .fuel-savings-calculator-wrapper .desc {
+  display: none;
+}
+
+body .fuel-savings-calculator-wrapper .estimated-savings div:hover {
+  box-shadow: none;
+}
+
+body .fuel-savings-pdf-report-wrapper a.pdf-report-btn,
+body .fuel-savings-pdf-report-wrapper a.pdf-report-salesperson-btn{
+  background-color: #ac603c;
+  border: 1px solid #ac603c;
+  color: #fff;
+  padding: 10px 16px;
+  display: inline-block;
+  font-weight: 600;
+  box-shadow: inset 0 0 0 0 #f5824e;
+  transition: 0.2s ease-in-out; 
+  border-radius: .33rem;
+}
+
+body .fuel-savings-pdf-report-wrapper a.pdf-report-btn:hover,
+body .fuel-savings-pdf-report-wrapper a.pdf-report-salesperson-btn:hover{
+background-color: #ac603c; 
+transform: translateY(-3px); 
+box-shadow: inset 350px 0 0 0 #f5824e;
+}
+
+body .fuel-savings-pdf-report-wrapper p {
+  margin: 10px 0 10px 0;
+}
+
+#pdf-report-salesperson.modal #send-pdf-report, #pdf-report.modal #send-pdf-report,
+#pdf-report-salesperson.modal button, #pdf-report.modal button{
+background: var(--wp--preset--color--accent);
+font-size: var(--wp--preset--font-size--medium);
+letter-spacing: 0.5px;
+padding-top: 0.7rem;
+padding-right: var(--wp--preset--spacing--20);
+padding-bottom: 0.7rem;
+padding-left: var(--wp--preset--spacing--20);
+text-transform: uppercase;
+border-radius: .33rem;
+color: #000;
+box-shadow: inset 0 0 0 0 #b3e53c;
+transition: 0.2s ease-in-out; 
+}
+
+#pdf-report-salesperson.modal #send-pdf-report:hover, #pdf-report.modal #send-pdf-report:hover,
+#pdf-report-salesperson.modal button:hover, #pdf-report.modal button:hover{
+background-color: #a2cd3a; 
+transform: translateY(-3px); 
+box-shadow: inset 350px 0 0 0 #b3e53c;
+} 
+
+/* End Custom Style For Calculator */
