--- a/blocks/src/fuel_savings_calculator_slider/style.scss
+++ b/blocks/src/fuel_savings_calculator_slider/style.scss
@@ -93,7 +93,8 @@ body {
         padding: 15px 20px;
         transition: none;
         font-size: 16px;
-        background-color: rgb(0 0 0 / 6%);
+        // background-color: rgb(0 0 0 / 6%);
+        background-color: rgb(255 0 0 / 15%); 
         margin-top: 9px;
 
         span{
