--- a/css/style.scss
+++ b/css/style.scss
@@ -60,6 +60,12 @@
       position: relative;
       display: flex;
       flex-direction: column;
+
+      small{
+        text-transform: uppercase; 
+        letter-spacing: 1px; 
+        font-size: 12px;
+      }
     }
   
     input[type=range]{
@@ -82,6 +88,7 @@
       padding: 15px 20px;
       transition: box-shadow .3s;
       font-size: 16px;
+      background-color: rgb(255 0 0 / 15%); 
     }
     
     div span{
