--- a/blocks/src/fuel_savings_calculator_slider/style.scss
+++ b/blocks/src/fuel_savings_calculator_slider/style.scss
@@ -76,7 +76,7 @@ body {
       margin-bottom: 40px;
     }
 
-    span#estimated-savings-annually-text {
+    span.heading-text {
       font-weight: bold;
       font-size: 18px;
       text-transform: uppercase;
@@ -96,9 +96,9 @@ body {
         // background-color: rgb(0 0 0 / 6%);
         background-color: rgb(255 0 0 / 15%); 
         margin-top: 9px;
+        font-weight: bold;
 
-        span{
-          font-weight: bold;
+        span.computed-value{
           font-size: 40px;
           display: block;
         }
