--- a/css/style.scss
+++ b/css/style.scss
@@ -89,14 +89,13 @@
       transition: box-shadow .3s;
       font-size: 16px;
       background-color: rgb(255 0 0 / 15%); 
+      font-weight: bold;
+
+      span.computed-value{
+        font-size: 40px;
+        display: block;
+      }
     }
-    
-    div span{
-      font-weight: 500;
-      font-size: 40px;
-      display: block;
-    }
-    
     
     div:hover{
       box-shadow: 0 0 11px rgba(33,33,33,.2); 
