--- a/css/style.scss
+++ b/css/style.scss
@@ -242,6 +242,10 @@
       div{
         width: 100%;
         max-width: 100%;
+
+        small{
+          line-height: 1.2;
+        }
       }
     }
   }
