--- a/blocks/src/fuel_savings_calculator_slider/style.scss
+++ b/blocks/src/fuel_savings_calculator_slider/style.scss
@@ -102,6 +102,10 @@ body {
           font-size: 40px;
           display: block;
         }
+
+        small{
+          line-height: 1.2;
+        }
       }
     }
     .desc {
